--- a/practica05.html
+++ b/practica05.html
@@ -3,28 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>practica04</title>
+    <title>practica05</title>
     <style>
         img {
             box-shadow: 5px 10px 20px red;
+            border-radius: 10% 40% 30%;
         }
         figure{
             text-align: center;
             width: 300px;
             display: inline-block;
         }
+        img.redonda {
+            border-radius: 50%;
+        }
     </style>
 </head>
 <body>
     <h1>Random Picture</h1>
     <div id="app"></div>
-    <figure>
-        <img src="https://picsum.photos/id/1/200/200" alt=""><figcaption>John</figcaption>
-    </figure>
-    <figure>
-        <img src="https://picsum.photos/id/2/200/200" alt=""><figcaption>Jane</figcaption>
-    </figure>
-
     <script>
         const app = document.getElementById("app")
         const url = "https://picsum.photos/id/"
@@ -40,8 +37,21 @@
             `
         } 
 
-        app.innerHTML = Picture({id:"10", nombre:"John"})
-        app.innerHTML += Picture({id:"11", nombre:"Jane"})
+        app.innerHTML = Picture({id:"1", nombre:"John"})
+        app.innerHTML += Picture({id:"2", nombre:"Jane"})
+        app.innerHTML += Picture({id:"3", nombre:"Joane"})
+
+        const lista = document.querySelectorAll("img")
+
+        for (let i = 0; i < lista.length; i++) {
+            lista[i].addEventListener("click", () => {
+                //lista[i].style.borderRadius = "50%"
+                lista[i].classList.toggle("redonda")
+            });
+            
+        }
+
+
     </script>
 </body>
 </html>
